# rest/get_cart_validate.go
@@ -17,12 +17,10 @@ import (
 //	@Produce		json
 //	@Param			Authorization	header	string	true	"bearer {token}"
 //	@Success		200				"No Content"
-//
-//	@Failure		400				{object}	errors.ErrValidation	"Bad Request"
-//	@Failure		401				{object}	errors.ErrCustom		"Unauthorized"
-//	@Failure		404				{object}	errors.ErrCustom		"Not Found"
-//	@Failure		500				{object}	errors.ErrCustom		"Internal Server Error"
-//
+//	@Failure		400				{object}	apperr.ValidationErr	"Bad Request"
+//	@Failure		401				{object}	engine.ErrorData		"Unauthorized"
+//	@Failure		404				{object}	engine.ErrorData		"Not Found"
+//	@Failure		500				{object}	engine.ErrorData		"Internal Server Error"
 //	@Router			/v1/cart/validate [get]
 func initGetCartValidate() {
 	engine.Router().GET(
